# houseprice-regression

./: houseprice-regression-tfdf.py  houseprice-regression-ydf.py  pyproject.toml
src/houseprice_regression/: house-prices-prediction-using-tfdf.ipynb  house-prices-prediction-using-ydf.ipynb  ydf_test.py
