[project]
name = "houseprice-regression"
version = "0.1.0"
description = ""
authors = [
    {name = "Vadan Khan",email = "vadankhan1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ydf",
    "ipykernel>=6.29.5"
]

[tool.poetry]
packages = [{include = "houseprice_regression", from = "src"}]

[tool.poetry.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
